# hmacro

./: .gitignore  CMakeLists.txt  Cargo.toml  Expander.hs  Iohandling.hs  Makefile  README.md  build.sh  expander.hs  hmacro.hs  html.hm  incl.hm  iohandling.hs  parser.hs  test.hm  text.txt
src/: CMakeLists.txt  argparse.cpp  argparse.hpp  cli-handler.cpp  cli-handler.hpp  compile_prelude.sh  expand.rs  filehandler.cpp  filehandler.hpp  lexer.rs  main.cpp  main.rs  parser.cpp  parser.hpp  parser.rs  prelude.hm  prelude.xxd.hm  process.rs  stackbuf.rs  to_arr.sh  tokbuf.cpp  tokbuf.hpp
src/process/: expander.rs  lexer.rs  parser.rs
