# hmacro - a macro preprocessor
# Copyright (C) 2025 Athena Boose 

# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.

# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.

# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.

# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "hmacro"
version = "2.2.2"
edition = "2024"
description = "A simple macro preprocessor"
repository = "https://github.com/chickenspaceprogram/hmacro"
license = "GPL-3.0-or-later"
keywords = ["preprocessor", "macro", "compiler"]
categories = ["compilers"]

